--- a/springproject/src/main/resources/templates/add.html
+++ b/springproject/src/main/resources/templates/add.html
@@ -11,21 +11,33 @@
 <div class="container mt-5 mb-10">
     <h1>Addition sensor</h1>
     <form action="#" th:action="@{/add_sensor}" th:object="${sensor}" method="post">
-        Name of Sensor <input type="text" name="name" id="name" placeholder="Name of sensor" class="form-control"><br>
-        Model of Sensor <input type="text" name="model" id="model" placeholder="Model" class="form-control"><br>
+        Name of Sensor <input type="text" id="name" th:field="*{name}" placeholder="Name of sensor" class="form-control"><br>
+        Model of Sensor <input type="text" id="model" th:field="*{model}" placeholder="Model" class="form-control"><br>
         <p>
             <label>
-                Range from <input name="rangeFrom" id="rangeFrom" type="number" max="45" min="12">
-                to <input name="rangeTo" id="rangeTo" type="number" min="12" max="45"><br>
+                Range from <input id="rangeFrom" th:field="*{rangeFrom}" type="number">
+                to <input th:field="*{rangeTo}" id="rangeTo" type="number"><br>
             </label>
         </p>
         <p>
             <label>
-                Location <input type="text" name="location" id="location" placeholder="Location" class="form-control"><br>
+                Location <input type="text" th:field="*{location}" id="location" placeholder="Location"
+                                class="form-control"><br>
             </label>
         </p>
-        Description <textarea name="description" placeholder="Write description" class="form-control"></textarea><br>
-
+        Type <select class="form-select" aria-label="Type" th:field="*{type}">
+        <option th:each="type : ${types}" th:value="${type.typeId}" th:text="${type.typeName}">type</option>
+    </select><br>
+        <br>
+        <p>
+            Unit <select class="form-select" aria-label="Unit" th:field="*{unit}">
+            <option th:each="unit : ${units}" th:value="${unit.unitId}" th:text="${unit.unitName}">unit</option>
+        </select>
+        </p><br>
+        <p>
+            Description <textarea th:field="*{description}" placeholder="Write description"
+                                  class="form-control"></textarea><br>
+        </p>
         <button type="submit" class="btn btn-success">Add sensor</button>
         <br>
     </form>
