--- a/springproject/src/main/resources/templates/header.html
+++ b/springproject/src/main/resources/templates/header.html
@@ -2,9 +2,11 @@
     <div class="d-flex justify-content-end d-flex flex-row" >
         <nav class="my-2 my-md-0 me-md-3">
             <a class="p-2 text-dark" href="/add_sensor">Add sensor</a>
-            <a class="p-2 text-dark" href="/sensors">Sensors</a>
+            <form class="d-flex" action="/search">
+                <input name="searchParam" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
             <a  class="p-2 btn btn-secondary btn-sm" href="/login">Sign up</a>
         </nav>
-
     </div>
 </div>
