--- a/springproject/src/main/resources/templates/add.html
+++ b/springproject/src/main/resources/templates/add.html
@@ -11,32 +11,36 @@
 <div class="container mt-5 mb-10">
     <h1>Addition sensor</h1>
     <form action="#" th:action="@{/add_sensor}" th:object="${sensor}" method="post">
-        Name of Sensor <input type="text" id="name" th:field="*{name}" placeholder="Name of sensor" class="form-control"><br>
-        Model of Sensor <input type="text" id="model" th:field="*{model}" placeholder="Model" class="form-control"><br>
+        Name of Sensor <input type="text" id="name" th:field="*{name}" placeholder="Name of sensor"
+                              class="form-control" required minlength="2" maxlength="30">
+        Model of Sensor <input type="text" id="model" th:field="*{model}" placeholder="Model"
+                               class="form-control" required minlength="4" maxlength="30">
+        <br>
         <p>
             <label>
-                Range from <input id="rangeFrom" th:field="*{rangeFrom}" type="number">
-                to <input th:field="*{rangeTo}" id="rangeTo" type="number"><br>
+                Range from <input id="rangeFrom" th:field="*{rangeFrom}" type="number" required>
+                to <input th:field="*{rangeTo}" id="rangeTo" type="number" required>
             </label>
         </p>
         <p>
             <label>
                 Location <input type="text" th:field="*{location}" id="location" placeholder="Location"
-                                class="form-control"><br>
+                                class="form-control" required minlength="2" maxlength="20">
             </label>
         </p>
         Type <select class="form-select" aria-label="Type" th:field="*{type}">
         <option th:each="type : ${types}" th:value="${type.typeId}" th:text="${type.typeName}">type</option>
-    </select><br>
+    </select>
         <br>
         <p>
             Unit <select class="form-select" aria-label="Unit" th:field="*{unit}">
             <option th:each="unit : ${units}" th:value="${unit.unitId}" th:text="${unit.unitName}">unit</option>
         </select>
-        </p><br>
+        </p>
+        <br>
         <p>
             Description <textarea th:field="*{description}" placeholder="Write description"
-                                  class="form-control"></textarea><br>
+                                  class="form-control" maxlength="150"></textarea><br>
         </p>
         <button type="submit" class="btn btn-success">Add sensor</button>
         <br>
